Roll forward to the newest polymer build
Fix styling issues

TODO: ensure that it works in non-shadow-com browsers

--- a/lib/src/modes/v8/ui/descriptions.html
+++ b/lib/src/modes/v8/ui/descriptions.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+<link rel="import" href="../../../../../../packages/polymer/polymer.html">
+
 <polymer-element name="ir-descriptions-v8">
   <template>
     <style type='text/css' scoped>
@@ -39,5 +41,5 @@
       <p>If numeric value does not fit into a smi it has to be boxed as a <em>heap number</em>.</p>
     </div>
   </template>
-  <script type="application/dart;component=1" src='descriptions.dart'></script>
+  <script type="application/dart" src='descriptions.dart'></script>
 </polymer-element>
