--- a/lib/src/ui/deopt-links.html
+++ b/lib/src/ui/deopt-links.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<link rel="import" href="../../../../packages/polymer/polymer.html">
 <polymer-element name="deopt-links">
   <template>
     <style>
@@ -61,5 +62,5 @@
       </div>
     </template>
   </template>
-  <script type="application/dart;component=1" src='deopt-links.dart'></script>
+  <script type="application/dart" src='deopt-links.dart'></script>
 </polymer-element>
