--- a/lib/src/ui/dropdown-element.html
+++ b/lib/src/ui/dropdown-element.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<link rel="import" href="../../../../packages/polymer/polymer.html">
 <polymer-element name="dropdown-element">
   <template>
     <style>
@@ -55,5 +56,5 @@
       </div>
     </div>
   </template>
-  <script type="application/dart;component=1" src='dropdown-element.dart'></script>
+  <script type="application/dart" src='dropdown-element.dart'></script>
 </polymer-element>
