--- a/lib/src/ui/ir-pane.html
+++ b/lib/src/ui/ir-pane.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<link rel="import" href="../../../../packages/polymer/polymer.html">
 <polymer-element name="ir-pane">
   <template>
     <link rel="stylesheet" type="text/css" href="ir-pane.css">
@@ -22,6 +22,6 @@
       <table id="rows" class="irpane"></table>
     </div>
   </template>
-  <script type="application/dart;component=1" src='ir-pane.dart'></script>
+  <script type="application/dart" src='ir-pane.dart'></script>
   <script src="prettify.js"></script>
 </polymer-element>
