--- a/lib/src/ui/open-file-button.html
+++ b/lib/src/ui/open-file-button.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<link rel="import" href="../../../../packages/polymer/polymer.html">
 <polymer-element name="open-file-button">
   <template>
     <style scoped>
@@ -36,5 +36,5 @@
     </span>
     <button on-click="{{clicked}}"><content></content></button>
   </template>
-  <script type="application/dart;component=1" src="open-file-button.dart"></script>
+  <script type="application/dart" src="open-file-button.dart"></script>
 </polymer-element>
