--- a/lib/src/ui/source-path.html
+++ b/lib/src/ui/source-path.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<link rel="import" href="../../../../packages/polymer/polymer.html">
 <polymer-element name="source-path">
   <template>
     <link rel="stylesheet" href="/deps/fa/css/font-awesome.min.css">
@@ -37,5 +38,5 @@
       </template>
     </span>
   </template>
-  <script type="application/dart;component=1" src='source-path.dart'></script>
+  <script type="application/dart" src='source-path.dart'></script>
 </polymer-element>
