--- a/lib/src/ui/util/code-mirror/code-mirror.html
+++ b/lib/src/ui/util/code-mirror/code-mirror.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<link rel="import" href="../../../../../../packages/polymer/polymer.html">
 <polymer-element name="code-mirror">
   <template>
     <link rel="stylesheet" href="deps/codemirror.css">
@@ -6,5 +7,5 @@
   </template>
   <script src="deps/codemirror.js"></script>
   <script src="deps/modes/javascript.js"></script>
-  <script type="application/dart;component=1" src='code-mirror.dart'></script>
+  <script type="application/dart" src='code-mirror.dart'></script>
 </polymer-element>
