--- a/lib/src/ui/util/switching-scope.html
+++ b/lib/src/ui/util/switching-scope.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
+<link rel="import" href="../../../../../packages/polymer/polymer.html">
 <polymer-element name="switching-scope">
   <template>
     <content></content>
   </template>
-  <script type="application/dart;component=1" src='switching-scope.dart'></script>
+  <script type="application/dart" src='switching-scope.dart'></script>
 </polymer-element>
