--- a/web/index.html
+++ b/web/index.html
@@ -116,5 +116,6 @@
       }
     </script>
     <hydra-app></hydra-app>
+    <script type="application/dart">export "package:polymer/init.dart";</script>
   </body>
 </html>
