--- a/lib/src/ui/graph-pane.html
+++ b/lib/src/ui/graph-pane.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<link rel="import" href="../../../../packages/polymer/polymer.html">
 <polymer-element name="graph-pane">
   <template>
     <style>
@@ -11,5 +11,5 @@
       <div id="graph"></div>
     </div>
   </template>
-  <script type="application/dart;component=1" src='graph-pane.dart'></script>
+  <script type="application/dart" src='graph-pane.dart'></script>
 </polymer-element>
