--- a/lib/src/ui/source-pane.html
+++ b/lib/src/ui/source-pane.html
@@ -1,34 +1,33 @@
 <!DOCTYPE html>
+<link rel="import" href="../../../../packages/polymer/polymer.html">
 <link rel="import" href="util/code-mirror/code-mirror.html">
 
 <polymer-element name="source-pane">
   <template>
     <style>
-      /* TODO(mraleph): fix combinator */
-      code-mirror ^ .line-dead {
+      code-mirror::shadow .line-dead {
         opacity: 0.2;
       }
 
-      /* TODO(mraleph): fix combinator */
-      code-mirror ^ .line-licm {
+      code-mirror::shadow .line-licm {
         background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAICAYAAADA+m62AAAAPUlEQVQYV2NkQAMfj/D/57f5yIgujiIAU4RNMVwhuiQ6H6wQl3XI4oy4FMHcCJPHcDS6J2A2EqUQpJhohQB77CbMiYyfvgAAAABJRU5ErkJggg==) repeat;
       }
 
-      code-mirror ^ .inline-marker {
+      code-mirror::shadow .inline-marker {
   	    cursor: pointer;
   	    z-index: 1000;
   	    color: #428bca;
   	  }
 
-      code-mirror ^ .CodeMirror {
+      code-mirror::shadow .CodeMirror {
         font-size: 14pt;
       }
 
-      code-mirror ^ .inline-marker:hover {
+      code-mirror::shadow .inline-marker:hover {
         color: #2a6496;
       }
 
-      code-mirror ^ .fa {
+      code-mirror::shadow .fa {
         display: inline-block;
         font-family: FontAwesome;
         font-style: normal;
@@ -38,45 +37,45 @@
         -moz-osx-font-smoothing: grayscale;
       }
 
-      code-mirror ^ .fa-chevron-circle-down:before {
+      code-mirror::shadow .fa-chevron-circle-down:before {
         content: "\f13a";
       }
 
-      code-mirror ^ .fa-warning:before {
+      code-mirror::shadow .fa-warning:before {
         content: "\f071";
       }
 
-      code-mirror ^ .deopt-bookmark {
+      code-mirror::shadow .deopt-bookmark {
         cursor: pointer;
         z-index: 1000;
       }
 
-      code-mirror ^ .deopt-bookmark-eager {
+      code-mirror::shadow .deopt-bookmark-eager {
         color: #C0392B;
       }
 
-      code-mirror ^ .deopt-bookmark-eager:hover {
+      code-mirror::shadow .deopt-bookmark-eager:hover {
         color: #E74C3C;
       }
 
-      code-mirror ^ .deopt-bookmark-lazy {
+      code-mirror::shadow .deopt-bookmark-lazy {
         color: #F39C12;
       }
 
-      code-mirror ^ .deopt-bookmark-lazy:hover {
+      code-mirror::shadow .deopt-bookmark-lazy:hover {
         color: #F1C40F;
       }
 
-      code-mirror ^ .deopt-bookmark-soft {
+      code-mirror::shadow .deopt-bookmark-soft {
         color: #8E44AD;
       }
 
-      code-mirror ^ .deopt-bookmark-soft:hover {
+      code-mirror::shadow .deopt-bookmark-soft:hover {
         color: #9B59B6;
       }
     </style>
     <code-mirror id="editor" lines="{{source}}" widgets="{{widgets}}" lineClasses="{{lineClasses}}">
     </code-mirror>
   </template>
-  <script type="application/dart;component=1" src='source-pane.dart'></script>
+  <script type="application/dart" src='source-pane.dart'></script>
 </polymer-element>
