--- a/lib/src/ui/spinner-element.html
+++ b/lib/src/ui/spinner-element.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<link rel="import" href="../../../../packages/polymer/polymer.html">
 <polymer-element name="spinner-element">
   <template>
     <style>
@@ -11,5 +12,5 @@
     </style>
     <span id="spinner">&nbsp;</span>
   </template>
-  <script type="application/dart;component=1" src='spinner-element.dart'></script>
+  <script type="application/dart" src='spinner-element.dart'></script>
 </polymer-element>
