--- a/web/index.html
+++ b/web/index.html
@@ -22,8 +22,8 @@
     <script src="deps/esprima.js"></script>
     <script src="deps/estraverse.js"></script>
 
-    <script src="jquery-2.0.3.js"></script>
-    <script src="deps/jquery-ui-1.10.4/js/jquery-ui-1.10.4.js"></script>
+    <script src="deps/jquery/js/jquery-2.0.3.js"></script>
+    <script src="deps/jquery/js/jquery-ui-1.10.4.js"></script>
     <script src="bootstrap/js/bootstrap.js"></script>
   </head>
 
