Switch to using SASS instead of pure CSS
Start cleaning up and unifing CSS rules for various components instead
of sprinkling magical constants all over HTML files.

Stop using dark colors switch to much lighter theme.

--- a/lib/src/ui/deopt-links.html
+++ b/lib/src/ui/deopt-links.html
@@ -14,7 +14,7 @@
       }
 
       .x-deopt-link > a {
-        font-family: 'Lato';
+        font-family: 'RobotoDraft';
         font-weight: bold;
         letter-spacing: 0.05em;
         position: relative;
