--- a/lib/src/ui/open-file-button.html
+++ b/lib/src/ui/open-file-button.html
@@ -2,35 +2,8 @@
 <link rel="import" href="../../../../packages/polymer/polymer.html">
 <polymer-element name="open-file-button">
   <template>
-    <style scoped>
-      input[type=file] {
-        visibility: hidden;
-        width: 0px;
-        height: 0px;
-        margin: 0px;
-        padding: 0px;
-      }
+    <link rel="stylesheet" type="text/css" href="open-file-button.css">
 
-      span.hidden {
-        position: absolute;
-        width: 0px;
-        height: 0px;
-        overflow: hidden;
-      }
-
-      button {
-        background: #2C3E50;
-        border: 0px;
-        color: white;
-        width: 40px;
-        height: 40px;
-        font-size: 16pt;
-      }
-
-      button:hover {
-        background: #34495E;
-      }
-    </style>
     <span class="hidden">
       <input id="file-input" type="file" multiple="multiple" on-change="{{changed}}">
     </span>
