--- a/web/index.html
+++ b/web/index.html
@@ -9,6 +9,7 @@
 
     <link rel="stylesheet" href='http://fonts.googleapis.com/css?family=Oswald:400,700' type='text/css'>
     <link rel="stylesheet" href='http://fonts.googleapis.com/css?family=Lato:400,700,900' type='text/css'>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=RobotoDraft:regular,bold,italic,thin,light,bolditalic,black,medium" type="text/css">
 
     <link rel="stylesheet" href="packages/irhydra/src/ui/ir-pane.css">
     <link rel="stylesheet" href="css/hydra.css">
