--- a/lib/src/ui/method-list.html
+++ b/lib/src/ui/method-list.html
@@ -2,159 +2,7 @@
 <link rel="import" href="../../../../packages/polymer/polymer.html">
 <polymer-element name="method-list">
   <template>
-    <style>
-      .method-list {
-        display: -webkit-flex;
-        display: flex;
-
-        -webkit-flex-flow: column;
-        flex-flow: column;
-
-        -webkit-flex-direction: column;
-        flex-direction: column;
-
-        min-height: 0px;
-        flex: 1 1;
-      }
-
-      .method-list-methods {
-        flex: 1 1;
-        -webkit-flex: 1 1 auto;
-        overflow-y: auto;
-        min-height: 0px;
-      }
-
-      .method-list-methods h3 {
-        color: white;
-      }
-
-      .method-list-footer {
-        min-height: 50px;
-        height: 50px;
-        max-height: 50px;
-        padding-left: 5px;
-      }
-
-      .method-list-methods::-webkit-scrollbar {
-        height: 8px;
-        width: 8px;
-      }
-
-      .method-list-methods::-webkit-scrollbar-track,
-      .method-list-methods::-webkit-scrollbar-corner {
-        background: inherit;
-      }
-
-      .method-list-methods::-webkit-scrollbar-thumb {
-        background: #BDC3C7;
-        border-radius: 5px;
-      }
-
-      .nav {
-        list-style: none;
-        position: relative;
-        display: block;
-        padding-left: 0;
-        margin-bottom: 0;
-      }
-
-      .nav > li > h3 {
-        font-family: 'Lato';
-        white-space: nowrap;
-      }
-
-      .phases {
-        list-style: none;
-        padding-left: 0;
-      }
-
-      .nav > li > h3 {
-        padding-left: 5px;
-        font-weight: 200;
-        font-size: 1.2em;
-      }
-
-      .nav > li > h3 > a {
-        display: block;
-        text-decoration: none;
-        color: inherit;
-      }
-
-      .nav > li > h3 > a:hover,
-      .nav > li > h3 > a:focus {
-        text-decoration: none;
-        background-color: #34495E;
-      }
-
-      .phases > li > a {
-        color: white;
-        display: block;
-        padding: 2px 15px;
-      }
-
-      .phases > li > a:hover,
-      .phases > li > a:focus {
-        text-decoration: none;
-        background-color: #34495E;
-      }
-
-      h3.deopt-eager {
-        color: #C0392B;
-        font-weight: 500 !important;
-      }
-
-      h3.deopt-lazy {
-        color: #F39C12;
-        font-weight: 500 !important;
-      }
-
-      h3.deopt-soft {
-        color: #8E44AD;
-        font-weight: 500 !important;
-      }
-
-      .toggle {
-        text-align: center;
-        width: 40px;
-        height: 40px;
-        border: none;
-        -webkit-appearance: none;
-        -ms-appearance: none;
-        -o-appearance: none;
-        appearance: none;
-        cursor: pointer;
-      }
-
-      .toggle:hover {
-        background: #34495E;
-      }
-
-      .toggle:after {
-        content: '\f071';
-        font-size: 16pt;
-        font-family: FontAwesome;
-        font-style: normal;
-        font-weight: normal;
-        line-height: 40px;
-        -webkit-font-smoothing: antialiased;
-        -moz-osx-font-smoothing: grayscale;
-        color: white;
-      }
-
-      .toggle:checked:after {
-        color: red;
-      }
-
-      .method-name-source {
-        font-size: 0.6em;
-        font-weight: bold;
-        /* background-color: #1ABC9C; */
-        padding: 2px;
-        border-radius: 4px;
-        border: 1px dashed #95A5A6;
-      }
-    </style>
-
+    <link rel="stylesheet" type="text/css" href="method-list.css">
     <div class="method-list">
       <div class="method-list-methods">
         <ul class="nav nav-list">
