--- a/lib/src/ui/method-list.html
+++ b/lib/src/ui/method-list.html
@@ -17,12 +17,12 @@
                 </h3>
                 <ul class="phases">
                   <template repeat="{{phase in method.value.phases | enumerate}}">
-                    <li><a href="#phase-{{method.index}}-{{phase.index}}" on-click="{{selectPhase}}" data-phase="{{method.index}},{{phase.index}}">{{phase.value.name}}</a></li>
+                    <li class="{{ { 'selected': phase.value == selected } }}"><a href="#phase-{{method.index}}-{{phase.index}}" on-click="{{selectPhase}}" data-phase="{{method.index}},{{phase.index}}">{{phase.value.name}}</a></li>
                   </template>
                 </ul>
               </template>
               <template if="{{method.value.phases.length == 1}}">
-                <h3 class="deopt-{{method.value.worstDeopt}}">
+                <h3 class="deopt-{{method.value.worstDeopt}} {{ { 'selected': method.value.phases.last == selected } }}">
                   <template if="{{method.value.name.source != null}}">
                     <div><span class="method-name-source">{{method.value.name.source}}</span></div>
                   </template>
