--- a/web/index.html
+++ b/web/index.html
@@ -53,6 +53,19 @@
               <li><a href="#demo-4">demo #4</a> [<a href="https://code.google.com/p/irhydra/source/browse/web/demos/dart/demo.dart?name=polymerized" target="_blank">source file</a>]</li>
             </ul>
           </li>
+          <li>
+            <h3>WebRebels 2014</h3>
+            <ul>
+              <li><a href="#webrebels-2014-concat">demo #4</a></li>
+              <li><a href="#webrebels-2014-concat-fixed">demo #4</a></li>
+              <li><a href="#webrebels-2014-method-function">demo #4</a></li>
+              <li><a href="#webrebels-2014-method-function-hack">demo #4</a></li>
+              <li><a href="#webrebels-2014-prototype-node">demo #4</a></li>
+              <li><a href="#webrebels-2014-prototype-node-getter">demo #4</a></li>
+              <li><a href="#webrebels-2014-prototype">demo #4</a></li>
+              <li><a href="#webrebels-2014-prototype-tostring">demo #4</a></li>
+            </ul>
+          </li>
         </ul>
         <h2>Compilation Artifacts Cheatsheet</h2>
         <p>If you already have some artifacts collected go ahead and explore them with&nbsp;<i class="fa fa-folder-open"></i>&nbsp;otherwise here is how you can collect some.</p>
