--- a/web/index.html
+++ b/web/index.html
@@ -26,6 +26,8 @@
     <script src="deps/jquery/js/jquery-2.0.3.js"></script>
     <script src="deps/jquery/js/jquery-ui-1.10.4.js"></script>
     <script src="bootstrap/js/bootstrap.js"></script>
+
+    <script src="deps/bunzip2.js"></script>
   </head>
 
   <body>
@@ -56,14 +58,14 @@
           <li>
             <h3>WebRebels 2014</h3>
             <ul>
-              <li><a href="#webrebels-2014-concat">demo #4</a></li>
-              <li><a href="#webrebels-2014-concat-fixed">demo #4</a></li>
-              <li><a href="#webrebels-2014-method-function">demo #4</a></li>
-              <li><a href="#webrebels-2014-method-function-hack">demo #4</a></li>
-              <li><a href="#webrebels-2014-prototype-node">demo #4</a></li>
-              <li><a href="#webrebels-2014-prototype-node-getter">demo #4</a></li>
-              <li><a href="#webrebels-2014-prototype">demo #4</a></li>
-              <li><a href="#webrebels-2014-prototype-tostring">demo #4</a></li>
+              <li><a href="#webrebels-2014-concat">String concatenation</a></li>
+              <li><a href="#webrebels-2014-concat-fixed">String concatenation (with a fix in V8)</a></li>
+              <li><a href="#webrebels-2014-prototype-node">Prototype chain traversal (node v0.10.x): data property</a></li>
+              <li><a href="#webrebels-2014-prototype-node-getter">Prototype chain traversal (node v0.10.x): getter</a></li>
+              <li><a href="#webrebels-2014-prototype">Prototype chain traversal (newer V8): data property</a></li>
+              <li><a href="#webrebels-2014-prototype-tostring">Prototype chain traversal (newer V8): data property, <code>toString</code>-hack</a></li>
+              <li><a href="#webrebels-2014-method-function">Method vs. Function</a></li>
+              <li><a href="#webrebels-2014-method-function-hack">Method vs. Function with more ICs</a></li>
             </ul>
           </li>
         </ul>
