Add comment in all WebRebels 2014 samples

--- a/web/index.html
+++ b/web/index.html
@@ -58,14 +58,14 @@
           <li>
             <h3>WebRebels 2014</h3>
             <ul>
-              <li><a href="#webrebels-2014-concat">String concatenation</a></li>
-              <li><a href="#webrebels-2014-concat-fixed">String concatenation (with a fix in V8)</a></li>
-              <li><a href="#webrebels-2014-prototype-node">Prototype chain traversal (node v0.10.x): data property</a></li>
-              <li><a href="#webrebels-2014-prototype-node-getter">Prototype chain traversal (node v0.10.x): getter</a></li>
-              <li><a href="#webrebels-2014-prototype">Prototype chain traversal (newer V8): data property</a></li>
-              <li><a href="#webrebels-2014-prototype-tostring">Prototype chain traversal (newer V8): data property, <code>toString</code>-hack</a></li>
-              <li><a href="#webrebels-2014-method-function">Method vs. Function</a></li>
-              <li><a href="#webrebels-2014-method-function-hack">Method vs. Function with more ICs</a></li>
+              <li><a href="#webrebels-2014-concat">String concatenation</a> [<a href="https://github.com/mraleph/irhydra/blob/interesting-mode/web/demos/webrebels2014/1-concat/concat.js" target="_blank">source file</a>]</li>
+              <li><a href="#webrebels-2014-concat-fixed">String concatenation (with a fix in V8)</a> [<a href="https://github.com/mraleph/irhydra/blob/interesting-mode/web/demos/webrebels2014/2-concat-fixed/concat.js" target="_blank">source file</a>]</li>
+              <li><a href="#webrebels-2014-prototype-node">Prototype chain traversal (node v0.10.x): data property</a> [<a href="https://github.com/mraleph/irhydra/blob/interesting-mode/web/demos/webrebels2014/3-prototype-node/prototype.js" target="_blank">source file</a>]</li>
+              <li><a href="#webrebels-2014-prototype-node-getter">Prototype chain traversal (node v0.10.x): getter</a> [<a href="https://github.com/mraleph/irhydra/blob/interesting-mode/web/demos/webrebels2014/4-prototype-node-getter/prototype.js" target="_blank">source file</a>]</li>
+              <li><a href="#webrebels-2014-prototype">Prototype chain traversal (newer V8): data property, 2 runs</a> [<a href="https://github.com/mraleph/irhydra/blob/interesting-mode/web/demos/webrebels2014/5-prototype/prototype.js" target="_blank">source file</a>]</li>
+              <li><a href="#webrebels-2014-prototype-tostring">Prototype chain traversal (newer V8): data property, 2 runs, <code>toString</code>-hack</a>  [<a href="https://github.com/mraleph/irhydra/blob/interesting-mode/web/demos/webrebels2014/6-prototype-tostring/prototype.js" target="_blank">source file</a>]</li>
+              <li><a href="#webrebels-2014-method-function">Method vs. Function</a> [<a href="https://github.com/mraleph/irhydra/blob/interesting-mode/web/demos/webrebels2014/7-method-function/method-function.js" target="_blank">source file</a>]</li>
+              <li><a href="#webrebels-2014-method-function-hack">Method vs. Function with more ICs</a> [<a href="https://github.com/mraleph/irhydra/blob/interesting-mode/web/demos/webrebels2014/8-method-function-hack/method-function.js" target="_blank">source file</a>]</li>
             </ul>
           </li>
         </ul>
