--- a/lib/src/ui/hydra.html
+++ b/lib/src/ui/hydra.html
@@ -2,6 +2,7 @@
 <link rel="import" href="../../../../packages/polymer/polymer.html">
 <link rel="import" href="../../../../packages/paper_elements/paper_toast.html">
 <link rel="import" href="../../../../packages/paper_elements/paper_progress.html">
+<link rel="import" href="../modes/v8/ui/dependent-code-deopt-reasons.html">
 <link rel="import" href="../modes/v8/ui/descriptions.html">
 <link rel="import" href="compilation-timeline.html">
 <link rel="import" href="dropdown-element.html">
