Improve support for perf annotate output in V8 and Dart VM modes
- fix mapping issues for V8 to have a better chance of successful association;
- after profile is loaded sort methods by the total amount of ticks (requires
verbose output from `perf annotate`);
- color blocks based on their hotness in the graph view after profile is loaded.

--- a/lib/src/ui/method-name.html
+++ b/lib/src/ui/method-name.html
@@ -4,9 +4,14 @@
   <template>
     <link rel="stylesheet" type="text/css" href="method-name.css">
     <h3 class="deopt-{{method.worstDeopt}}">
-      <template if="{{source != null}}">
-        <div><span class="source">{{source}}</span></div>
-      </template>
+      <div>
+        <template if="{{source != null}}">
+          <span class="source">{{source}}</span>
+        </template>
+        <template if="{{method.perfProfile != null}}">
+          <span class="source">{{method.perfProfile.totalTicks}}</span>
+        </template>
+      </div>
       <template if="{{targetHref != null}}">
         <a href="{{targetHref}}">
           {{name}}
