--- a/lib/src/ui/hydra.html
+++ b/lib/src/ui/hydra.html
@@ -66,7 +66,7 @@
     <div class="pane">
       <template if="{{methods != null && !methods.isEmpty}}">
         <div class="sidebar">
-          <method-list methods="{{methods}}" selected="{{phase}}" demangleNames="{{demangleNames}}"></method-list>
+          <method-list methods="{{methods}}" selected="{{phase}}" demangleNames="{{demangleNames}}" sortBy="{{sortMethodsBy}}"></method-list>
         </div>
         <template if="{{ir == null}}">
           <div class="ir-placeholder">
