--- a/web/index.html
+++ b/web/index.html
@@ -44,28 +44,28 @@
           <li>
             <h3>V8</h3>
             <ul>
-              <li><a href="#demo-1">demo #1</a> [<a href="https://code.google.com/p/irhydra/source/browse/web/demos/v8/deopt-eager/demo.js?name=polymerized" target="_blank">source file</a>]</li>
-              <li><a href="#demo-2">demo #2</a> [<a href="https://code.google.com/p/irhydra/source/browse/web/demos/v8/deopt-lazy/demo.js?name=polymerized" target="_blank">source file</a>]</li>
-              <li><a href="#demo-3">demo #3</a> [<a href="https://code.google.com/p/irhydra/source/browse/web/demos/v8/deopt-soft/demo.js?name=polymerized" target="_blank">source file</a>]</li>
+              <li><a href="#demo-1">demo #1</a> [<a href="https://github.com/mraleph/irhydra/blob/master/web/demos/v8/deopt-eager/demo.js" target="_blank">source file</a>]</li>
+              <li><a href="#demo-2">demo #2</a> [<a href="https://github.com/mraleph/irhydra/blob/master/web/demos/v8/deopt-lazy/demo.js" target="_blank">source file</a>]</li>
+              <li><a href="#demo-3">demo #3</a> [<a href="https://github.com/mraleph/irhydra/blob/master/web/demos/v8/deopt-soft/demo.js" target="_blank">source file</a>]</li>
             </ul>
           </li>
           <li>
             <h3>Dart VM</h3>
             <ul>
-              <li><a href="#demo-4">demo #4</a> [<a href="https://code.google.com/p/irhydra/source/browse/web/demos/dart/demo.dart?name=polymerized" target="_blank">source file</a>]</li>
+              <li><a href="#demo-4">demo #4</a> [<a href="https://github.com/mraleph/irhydra/blob/master/web/demos/dart/demo.dart" target="_blank">source file</a>]</li>
             </ul>
           </li>
           <li>
             <h3>WebRebels 2014</h3>
             <ul>
-              <li><a href="#webrebels-2014-concat">String concatenation</a> [<a href="https://github.com/mraleph/irhydra/blob/interesting-mode/web/demos/webrebels2014/1-concat/concat.js" target="_blank">source file</a>]</li>
-              <li><a href="#webrebels-2014-concat-fixed">String concatenation (with a fix in V8)</a> [<a href="https://github.com/mraleph/irhydra/blob/interesting-mode/web/demos/webrebels2014/2-concat-fixed/concat.js" target="_blank">source file</a>]</li>
-              <li><a href="#webrebels-2014-prototype-node">Prototype chain traversal (node v0.10.x): data property</a> [<a href="https://github.com/mraleph/irhydra/blob/interesting-mode/web/demos/webrebels2014/3-prototype-node/prototype.js" target="_blank">source file</a>]</li>
-              <li><a href="#webrebels-2014-prototype-node-getter">Prototype chain traversal (node v0.10.x): getter</a> [<a href="https://github.com/mraleph/irhydra/blob/interesting-mode/web/demos/webrebels2014/4-prototype-node-getter/prototype.js" target="_blank">source file</a>]</li>
-              <li><a href="#webrebels-2014-prototype">Prototype chain traversal (newer V8): data property, 2 runs</a> [<a href="https://github.com/mraleph/irhydra/blob/interesting-mode/web/demos/webrebels2014/5-prototype/prototype.js" target="_blank">source file</a>]</li>
-              <li><a href="#webrebels-2014-prototype-tostring">Prototype chain traversal (newer V8): data property, 2 runs, <code>toString</code>-hack</a>  [<a href="https://github.com/mraleph/irhydra/blob/interesting-mode/web/demos/webrebels2014/6-prototype-tostring/prototype.js" target="_blank">source file</a>]</li>
-              <li><a href="#webrebels-2014-method-function">Method vs. Function</a> [<a href="https://github.com/mraleph/irhydra/blob/interesting-mode/web/demos/webrebels2014/7-method-function/method-function.js" target="_blank">source file</a>]</li>
-              <li><a href="#webrebels-2014-method-function-hack">Method vs. Function with more ICs</a> [<a href="https://github.com/mraleph/irhydra/blob/interesting-mode/web/demos/webrebels2014/8-method-function-hack/method-function.js" target="_blank">source file</a>]</li>
+              <li><a href="#webrebels-2014-concat">String concatenation</a> [<a href="https://github.com/mraleph/irhydra/blob/master/web/demos/webrebels2014/1-concat/concat.js" target="_blank">source file</a>]</li>
+              <li><a href="#webrebels-2014-concat-fixed">String concatenation (with a fix in V8)</a> [<a href="https://github.com/mraleph/irhydra/blob/master/web/demos/webrebels2014/2-concat-fixed/concat.js" target="_blank">source file</a>]</li>
+              <li><a href="#webrebels-2014-prototype-node">Prototype chain traversal (node v0.10.x): data property</a> [<a href="https://github.com/mraleph/irhydra/blob/master/web/demos/webrebels2014/3-prototype-node/prototype.js" target="_blank">source file</a>]</li>
+              <li><a href="#webrebels-2014-prototype-node-getter">Prototype chain traversal (node v0.10.x): getter</a> [<a href="https://github.com/mraleph/irhydra/blob/master/web/demos/webrebels2014/4-prototype-node-getter/prototype.js" target="_blank">source file</a>]</li>
+              <li><a href="#webrebels-2014-prototype">Prototype chain traversal (newer V8): data property, 2 runs</a> [<a href="https://github.com/mraleph/irhydra/blob/master/web/demos/webrebels2014/5-prototype/prototype.js" target="_blank">source file</a>]</li>
+              <li><a href="#webrebels-2014-prototype-tostring">Prototype chain traversal (newer V8): data property, 2 runs, <code>toString</code>-hack</a>  [<a href="https://github.com/mraleph/irhydra/blob/master/web/demos/webrebels2014/6-prototype-tostring/prototype.js" target="_blank">source file</a>]</li>
+              <li><a href="#webrebels-2014-method-function">Method vs. Function</a> [<a href="https://github.com/mraleph/irhydra/blob/master/web/demos/webrebels2014/7-method-function/method-function.js" target="_blank">source file</a>]</li>
+              <li><a href="#webrebels-2014-method-function-hack">Method vs. Function with more ICs</a> [<a href="https://github.com/mraleph/irhydra/blob/master/web/demos/webrebels2014/8-method-function-hack/method-function.js" target="_blank">source file</a>]</li>
             </ul>
           </li>
         </ul>
